video calling features

--- a/.env.example
+++ b/.env.example
@@ -58,6 +58,25 @@ TWILIO_AUTH_TOKEN=your_twilio_auth_token
 # Format: whatsapp:+1234567890
 TWILIO_WHATSAPP_NUMBER=whatsapp:+1234567890
 
+# -----------------------------------------------------------------------------
+# Video Calling (Daily.co) - OPTIONAL
+# -----------------------------------------------------------------------------
+# Daily.co API key for production video calling
+# Get from: https://dashboard.daily.co/ (10,000 free minutes/month)
+# 
+# How it works:
+# - WITHOUT API key: Demo mode - works but uses public domain (basic features)
+# - WITH API key: Production mode - private rooms, custom domain, better security
+# 
+# To get started:
+# 1. Sign up at https://dashboard.daily.co/
+# 2. Get your API key from the dashboard
+# 3. Add it here for production video calling
+# 
+# IMPORTANT: Video calls work in both demo and production mode!
+# Leave blank for demo mode (good for testing)
+DAILY_API_KEY=
+
 # =============================================================================
 # NOTES FOR DEPLOYMENT ON COOLIFY
 # =============================================================================
@@ -70,10 +89,16 @@ TWILIO_WHATSAPP_NUMBER=whatsapp:+1234567890
 #
 # REQUIRED VARIABLES FOR PRODUCTION:
 # - DATABASE_URL (PostgreSQL connection string)
-# - SESSION_SECRET (random secure string)
+# - SESSION_SECRET (random secure string - CRITICAL for WebSocket authentication!)
 # - STRIPE_SECRET_KEY (if using payments)
 # - VITE_STRIPE_PUBLIC_KEY (if using payments)
 #
 # OPTIONAL VARIABLES:
 # - TWILIO_* (only if using WhatsApp/SMS features)
+# - DAILY_API_KEY (for production video calling - demo mode works without it)
+#
+# IMPORTANT FOR WEBSOCKET (Real-time Chat):
+# - SESSION_SECRET must be set and kept consistent across restarts
+# - Used for WebSocket authentication and session management
+# - Generate a strong random string for production
 # =============================================================================
