--- a/.env.production.example
+++ b/.env.production.example
@@ -36,3 +36,8 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_REGION=us-east-1
 AWS_S3_BUCKET=
+
+# Video Calling with Daily.co (Optional)
+# Get API key from: https://dashboard.daily.co/ (10,000 free minutes/month)
+# Leave blank to use demo mode (still works, but with public domain)
+DAILY_API_KEY=
